--- a/Module 5.0/index.html
+++ b/Module 5.0/index.html
@@ -24,7 +24,7 @@
               <div class="navbar-brand">
                 <a href="index.html"><h1>The Chinese</h1></a>
                 <p>
-                  <img src="images/star-k-logo.png" alt="Nirvanacertification">
+                  <img src="./images/star-k-logo.png" alt="Nirvanacertification">
                   <span>Kosher Certified</span>
                 </p>
               </div>
